// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser-key-name-2-schema .searchValue: .searchValue 1`] = `
{
  "targetSchema": NumberSchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "searchValue",
    "label": "",
    "params": [],
    "rawType": "",
    "rules": {
      "exclusiveMaximum": undefined,
      "exclusiveMinimum": undefined,
      "maximum": undefined,
      "minimum": undefined,
      "multipleOf": undefined,
      "required": false,
    },
    "title": "",
    "type": "number",
  },
  "wrapSchema": ObjectSchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "",
    "label": "",
    "params": [
      NumberSchema {
        "description": "",
        "enum": [],
        "examples": [],
        "format": "",
        "id": "",
        "keyName": "searchValue",
        "label": "",
        "params": [],
        "rawType": "",
        "rules": {
          "exclusiveMaximum": undefined,
          "exclusiveMinimum": undefined,
          "maximum": undefined,
          "minimum": undefined,
          "multipleOf": undefined,
          "required": false,
        },
        "title": "",
        "type": "number",
      },
    ],
    "rawType": "object",
    "rules": {
      "required": false,
    },
    "title": "",
    "type": "object",
  },
}
`;

exports[`parser-key-name-2-schema [0].params.updateBy[0].time: [0].params.updateBy[0].time 1`] = `
{
  "targetSchema": NullSchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "time",
    "label": "",
    "params": [],
    "rawType": "null",
    "rules": {
      "required": false,
    },
    "title": "",
    "type": "null",
  },
  "wrapSchema": ArraySchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "",
    "label": "",
    "params": [
      ObjectSchema {
        "description": "",
        "enum": [],
        "examples": [],
        "format": "",
        "id": "",
        "keyName": "",
        "label": "",
        "params": [
          ObjectSchema {
            "description": "",
            "enum": [],
            "examples": [],
            "format": "",
            "id": "",
            "keyName": "params",
            "label": "",
            "params": [
              ArraySchema {
                "description": "",
                "enum": [],
                "examples": [],
                "format": "",
                "id": "",
                "keyName": "updateBy",
                "label": "",
                "params": [
                  ObjectSchema {
                    "description": "",
                    "enum": [],
                    "examples": [],
                    "format": "",
                    "id": "",
                    "keyName": "",
                    "label": "",
                    "params": [
                      NullSchema {
                        "description": "",
                        "enum": [],
                        "examples": [],
                        "format": "",
                        "id": "",
                        "keyName": "time",
                        "label": "",
                        "params": [],
                        "rawType": "null",
                        "rules": {
                          "required": false,
                        },
                        "title": "",
                        "type": "null",
                      },
                    ],
                    "rawType": "object",
                    "rules": {
                      "required": false,
                    },
                    "title": "",
                    "type": "object",
                  },
                ],
                "rawType": "array",
                "rules": {
                  "maxLength": undefined,
                  "minLength": undefined,
                  "required": false,
                  "uniqueItems": undefined,
                },
                "title": "",
                "type": "array",
              },
            ],
            "rawType": "object",
            "rules": {
              "required": false,
            },
            "title": "",
            "type": "object",
          },
        ],
        "rawType": "object",
        "rules": {
          "required": false,
        },
        "title": "",
        "type": "object",
      },
    ],
    "rawType": "array",
    "rules": {
      "maxLength": undefined,
      "minLength": undefined,
      "required": false,
      "uniqueItems": undefined,
    },
    "title": "",
    "type": "array",
  },
}
`;

exports[`parser-key-name-2-schema dept.searchValue.username: dept.searchValue.username 1`] = `
{
  "targetSchema": StringSchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "username",
    "label": "",
    "params": [],
    "rawType": "",
    "rules": {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "string",
  },
  "wrapSchema": ObjectSchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "dept",
    "label": "",
    "params": [
      ObjectSchema {
        "description": "",
        "enum": [],
        "examples": [],
        "format": "",
        "id": "",
        "keyName": "searchValue",
        "label": "",
        "params": [
          StringSchema {
            "description": "",
            "enum": [],
            "examples": [],
            "format": "",
            "id": "",
            "keyName": "username",
            "label": "",
            "params": [],
            "rawType": "",
            "rules": {
              "maxLength": undefined,
              "minLength": undefined,
              "pattern": undefined,
              "required": false,
            },
            "title": "",
            "type": "string",
          },
        ],
        "rawType": "object",
        "rules": {
          "required": false,
        },
        "title": "",
        "type": "object",
      },
    ],
    "rawType": "object",
    "rules": {
      "required": false,
    },
    "title": "",
    "type": "object",
  },
}
`;

exports[`parser-key-name-2-schema dept.searchValue: dept.searchValue 1`] = `
{
  "targetSchema": NumberSchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "searchValue",
    "label": "",
    "params": [],
    "rawType": "",
    "rules": {
      "exclusiveMaximum": undefined,
      "exclusiveMinimum": undefined,
      "maximum": undefined,
      "minimum": undefined,
      "multipleOf": undefined,
      "required": false,
    },
    "title": "",
    "type": "number",
  },
  "wrapSchema": ObjectSchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "dept",
    "label": "",
    "params": [
      NumberSchema {
        "description": "",
        "enum": [],
        "examples": [],
        "format": "",
        "id": "",
        "keyName": "searchValue",
        "label": "",
        "params": [],
        "rawType": "",
        "rules": {
          "exclusiveMaximum": undefined,
          "exclusiveMinimum": undefined,
          "maximum": undefined,
          "minimum": undefined,
          "multipleOf": undefined,
          "required": false,
        },
        "title": "",
        "type": "number",
      },
    ],
    "rawType": "object",
    "rules": {
      "required": false,
    },
    "title": "",
    "type": "object",
  },
}
`;

exports[`parser-key-name-2-schema roles[0].params.updateBy: roles[0].params.updateBy 1`] = `
{
  "targetSchema": UnknownSchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "updateBy",
    "label": "",
    "params": [],
    "rawType": "unknown",
    "rules": {
      "required": false,
    },
    "title": "",
    "type": "unknown",
  },
  "wrapSchema": ArraySchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "roles",
    "label": "",
    "params": [
      ObjectSchema {
        "description": "",
        "enum": [],
        "examples": [],
        "format": "",
        "id": "",
        "keyName": "",
        "label": "",
        "params": [
          ObjectSchema {
            "description": "",
            "enum": [],
            "examples": [],
            "format": "",
            "id": "",
            "keyName": "params",
            "label": "",
            "params": [
              UnknownSchema {
                "description": "",
                "enum": [],
                "examples": [],
                "format": "",
                "id": "",
                "keyName": "updateBy",
                "label": "",
                "params": [],
                "rawType": "unknown",
                "rules": {
                  "required": false,
                },
                "title": "",
                "type": "unknown",
              },
            ],
            "rawType": "object",
            "rules": {
              "required": false,
            },
            "title": "",
            "type": "object",
          },
        ],
        "rawType": "object",
        "rules": {
          "required": false,
        },
        "title": "",
        "type": "object",
      },
    ],
    "rawType": "array",
    "rules": {
      "maxLength": undefined,
      "minLength": undefined,
      "required": false,
      "uniqueItems": undefined,
    },
    "title": "",
    "type": "array",
  },
}
`;

exports[`parser-key-name-2-schema roles[0].params: roles[0].params 1`] = `
{
  "targetSchema": BooleanSchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "params",
    "label": "",
    "params": [],
    "rawType": "boolean",
    "rules": {
      "required": false,
    },
    "title": "",
    "type": "boolean",
  },
  "wrapSchema": ArraySchema {
    "description": "",
    "enum": [],
    "examples": [],
    "format": "",
    "id": "",
    "keyName": "roles",
    "label": "",
    "params": [
      ObjectSchema {
        "description": "",
        "enum": [],
        "examples": [],
        "format": "",
        "id": "",
        "keyName": "",
        "label": "",
        "params": [
          BooleanSchema {
            "description": "",
            "enum": [],
            "examples": [],
            "format": "",
            "id": "",
            "keyName": "params",
            "label": "",
            "params": [],
            "rawType": "boolean",
            "rules": {
              "required": false,
            },
            "title": "",
            "type": "boolean",
          },
        ],
        "rawType": "object",
        "rules": {
          "required": false,
        },
        "title": "",
        "type": "object",
      },
    ],
    "rawType": "array",
    "rules": {
      "maxLength": undefined,
      "minLength": undefined,
      "required": false,
      "uniqueItems": undefined,
    },
    "title": "",
    "type": "array",
  },
}
`;
